<resources>
    <string name="app_name">Simple Community</string>

    <string name="title">제목</string>
    <string name="writing">글쓰기</string>
    <string name="scrap">스크랩</string>
    <string name="like">좋아요</string>
    <string name="notice_board">게시판</string>
    <string name="content">내용</string>

    <string name="thumbnail_browse">썸네일 찾아보기</string>

    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="auto_sign_in">자동로그인</string>
    <string name="nike_name">닉네임</string>
    <string name="certified_num">인증번호</string>
    <string name="certified_done">인증완료</string>

    <string name="content_description_imageview">이미지</string>

    <string name="private_all">비공개</string>
    <string name="public_all">공개</string>
    <string name="friends_public">친구만공개</string>
    <string name="open_range">공개범위</string>
</resources>