<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/content_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/content_upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writing"
        />
</androidx.appcompat.widget.LinearLayoutCompat>