<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/sign_in_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="80dp"
            card_view:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="13.3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_id_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="PW"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/auto_sign_in_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/auto_sign_in" />

                    <Button
                        android:id="@+id/sign_in_btn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:elevation="2dp"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/sign_up_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up" />

                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
